--- a/fichero.html
+++ b/fichero.html
@@ -94,6 +94,7 @@
         <h3>¿Qué color te gusta?</h3>
         Verde <input type="radio" name="color" value="verde">
         Rojo <input type="radio" name="color" value="rojo">
+        <input type="submit" name="enviar" value= "Enviar datos">
     </form>
 </body>
 </html>
